--- a/styles/home.css
+++ b/styles/home.css
@@ -1,1 +1,39 @@
 /* add home page styles here */
+body {
+    background-color: rgb(252, 232, 213);
+}
+
+#characters {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 100px;
+}
+
+#characters li {
+    border: 1px solid darkblue;
+    background-color: rgb(177, 232, 240);
+    width: 150px;
+    height: 250px;
+    padding: 10px;
+    margin-right: 10px;
+}
+
+#characters li h3{
+    margin-bottom: 1px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-align: center;
+}
+
+#characters li img {
+    width: 100%;
+}
+
+#characters span {
+    display: flex;
+    justify-content: center;
+}
+#characters li button {
+    margin: 10px 10px 0 10px;
+}
