--- a/styles/home.css
+++ b/styles/home.css
@@ -37,3 +37,8 @@ body {
 #characters li button {
     margin: 10px 10px 0 10px;
 }
+
+header {
+    margin: 50px 0 0 725px;
+    font-size: x-large;
+}
