--- a/data/cart.css
+++ b/data/cart.css
@@ -8,6 +8,10 @@ main {
     border: solid grey 1px;
     width: 400px;
     margin-left: 200px;
+    background-color: gray;
+    opacity: 95%;
+    box-shadow: 0px 0px 8px 2px white;
+     
 }
 
 table td {
@@ -20,6 +24,7 @@ a {
     color: white;
     background-color: gray;
     padding: 0px 2px 0px 2px;
+    box-shadow: 0px 0px 8px 2px rgba(255, 255, 255, 0.678);
 }
 a:hover {
     opacity: 50%;
@@ -31,6 +36,7 @@ button {
     background-color: gray;
     padding: 0px 2px 0px 2px;
     height: 25px;
+    box-shadow: 0px 0px 8px 2px rgba(255, 255, 255, 0.678);
 }
 button:hover {
     opacity: 50%;
@@ -40,4 +46,5 @@ body {
     background: url('../assets/cart-background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    height: 1000px;
 }
